[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "necroflow-tui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "necroflow",
    "panelview",
]

[project.scripts]
necroflow-tui = "necroflow_tui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/necroflow_tui"]
